<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/maven-v4_0_0.xsd">

    <!-- Important: für den Bau der großen jar, Goal "compile" des subprojekts "-application" benutzen -->

    <modelVersion>4.0.0</modelVersion>

    <name>OScrabble</name>

    <artifactId>oscrabble</artifactId>
    <version>1.0-snapshot</version>
    <groupId>org.faucheux</groupId>
    <packaging>pom</packaging>

    <properties>
        <project.description>A scrabble game</project.description>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>14</maven.compiler.source>
        <maven.compiler.target>14</maven.compiler.target>
        <version.maven.compiler>2.3.2</version.maven.compiler>
        <version.maven.site>3.3</version.maven.site>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <modules>
        <module>scrabble-common</module>
        <module>scrabble-client-ai</module>
        <module>scrabble-client-swing</module>
        <module>scrabble-client-vaadin</module>
        <module>scrabble-dictionary</module>
        <module>scrabble-rest-common</module>
        <module>scrabble-rest-dictionary</module>
        <module>scrabble-rest-server</module>
        <module>scrabble-server</module>
        <module>scrabble-test-fixtures</module>
        <module>scrabble-launch4j-packager</module>
    </modules>

</project>
